fix: Overflow in print preview (#2)
* fix: Print view overflow

* chore: CI env update & bump version

* fix: do not run core tests

* fix: Use ruby 3.1

--- a/assets/stylesheets/redmine_hide_sidebar.css
+++ b/assets/stylesheets/redmine_hide_sidebar.css
@@ -46,7 +46,6 @@
 }
 
 body #content.sidebar_hidden {
-  width: auto;
   margin-right: 0;
 }
 
@@ -61,7 +60,6 @@ body #content.sidebar_hidden {
   }
 
   body #content {
-    width: auto;
     margin-right: 0;
   }
 }
